fixed overflow issue

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -449,7 +449,7 @@
   width: 100%;
   margin: 20px auto;
   display: flex;
-  height: fit-content;
+  /* height: auto; */
   /* justify-content: center; */
   overflow-x: scroll;
   flex-flow: row;
@@ -463,18 +463,18 @@
 .latest .amangrid {
   flex: 29%;
   margin: 40px 12px;
-  height: 400px;
+  /* height: 400px; */
   max-width: 350px;
   min-width: 320px;
   padding: 0px 20px;
-  border-right: 1px solid #dac27586;
+  border-right: 1px solid #dac27541;
 }
 .latest .amangrid:last-child {
   border-right: none;
 }
 .latest .amangrid .profile {
   width: 100%;
-  height: 80%;
+  height: calc(0.8 * 400px);
   position: relative;
   overflow: hidden;
   border-radius: 45px;
@@ -482,7 +482,7 @@
 }
 .latest .meet .title {
   width: 100%;
-  height: 20%;
+  height: fit-content;
   padding: 20px 20px;
   text-align: center;
   font-weight: 100;
@@ -503,7 +503,7 @@
 }
 @media screen and (max-width: 1091px) {
   .latest .meet > div {
-    height: 380px;
+    /* height: 380px; */
   }
   .latest .meet {
     padding: 0 5px;
@@ -646,7 +646,7 @@
     height: auto;
     flex: 35%;
     max-width: 100%;
-    border-right: none;
+    /* border-right: none; */
     /* border-bottom: 1px solid #dac27586; */
   }
   .latest .amangrid .profile {
